--- a/src/template.html
+++ b/src/template.html
@@ -1,10 +1,8 @@
 <header>
   <nav>
-    <!-- buttons for different 'tabs' -->
-    <!-- e.g. home, menu, about -->
-    <button id="home">Home</button>
-    <button id="menu">Menu</button>
-    <button id="about">About</button>
+    <button>Home</button>
+    <button>Menu</button>
+    <button>Contact</button>
   </nav>
 </header>
 <div id="content">
